	- Store the value of digits(ULONG_MAX) in a static, since it
	  doesn't change and hence doesn't need to be recalculated.
	  (DLR)
- nano.c:
  do_verbatim_input()
	- Move to text.c, since it's an advanced text-based operation.
	  (DLR)
- nano.h:
	- Readd MIN_EDITOR_COLS #define. (DLR)
- prompt.c:
  do_statusbar_input()
	- Fix misplaced break when handling NANO_VERBATIM_KEY. (DLR)
- rcfile.c:
  do_rcfile()
	- Remove unneeded assert. (DLR)
- search.c:
  findnextstr()
	- Remove parameter can_display_wrap, as it's always set to TRUE
	  now, and rename parameter wholeword to whole_word for
	  consistency. (DLR)
  do_replace_loop()
	- Change order of parameters to more closely match those of
	  findnextstr(), and rename parameter wholewords to whole_word
	  for consistency. (DLR)
- text.c:
  begpar()
	- Return FALSE if foo is NULL, as inpar() does. (DLR)
  backup_lines()
	- Return void instead of a pointer to the copy of the first
	  line, since current will point to the same location after the
	  text is copied and so can be used instead of the old return
	  value. (DLR)
	- Remove unused quote_len parameter. (DLR)
  do_alt_speller()
	- Move the code that replaces the text of the current file with
	  the text of the spell-checked file into its own function,
	  replace_buffer(). (DLR)
- utils.c:
  get_page_start()
	- Fix test so that we scroll through the line in 8-character
	  chunks when COLS is greater than 8, not when COLS is greater
	  than 9. (DLR)
- winio.c:
  nanoget_repaint()
	- Rename parameter inputbuf to buf, for consistency. (DLR)
  update_line()
	- Remove now-unneeded logic that set the index parameter to zero
	  if the fileptr parameter didn't point to current. (DLR)
  edit_add()
	- Rename to edit_draw(), and rename parameter yval to line.
	  (DLR)
  do_yesno()
	- Make mouse clicks on the Yes/No/All shortcuts work properly
	  when the MORE_SPACE flag is set. (DLR)
- README.CVS:
	- Mention that the minimum required version of texinfo is 4.0,